src/objects/DatatableElement__c.object
<CustomObject>
    <fields>
        <fullName>ColumnInformationIcon__c</fullName>
        <label>Column Information Icon</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ColumnInformation__c</fullName>
        <label>Column Information</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Datatable__c</fullName>
        <label>Datatable</label>
        <referenceTo>Datatable__c</referenceTo>
        <relationshipLabel>Datatable Elements</relationshipLabel>
        <relationshipName>DatatableElements</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>DisplaySettings__c</fullName>
        <label>Display Settings</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Desktop</fullName>
                </value>
                <value>
                    <fullName>Mobile</fullName>
                </value>
                <value>
                    <fullName>Both</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>ExcludedPicklistValues__c</fullName>
        <label>Excluded Picklist Values</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ExternalId__c</fullName>
        <caseSensitive>true</caseSensitive>
        <externalId>true</externalId>
        <label>External Id</label>
        <length>80</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>FieldApiName__c</fullName>
        <label>Field Api Name</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Filtrable__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Allow this List view Element to be filtrable</description>
        <label>Filtrable</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Label__c</fullName>
        <label>Label</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Navigation__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Navigation</label>
        <referenceTo>Navigation__c</referenceTo>
        <relationshipLabel>Datatable Elements</relationshipLabel>
        <relationshipName>DatatableElements</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Order__c</fullName>
        <label>Order</label>
        <precision>2</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Searchable__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Searchable</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Sortable__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Allow this List view element to be sortable</description>
        <label>Sortable</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Type__c</fullName>
        <label>Type</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <label>Datatable Element</label>
    <nameField>
        <label>Datatable Element Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Datatable Elements</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>